// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QueryParser > parse("   intext:abc  ") 1`] = `
[
  {
    "filterValue": "abc",
    "invert": false,
    "qualifier": "contains",
  },
]
`;

exports[`QueryParser > parse("   user: abc ") 1`] = `
[
  {
    "filterValue": "abc",
    "invert": false,
    "qualifier": "author",
  },
]
`;

exports[`QueryParser > parse(" ") 1`] = `[]`;

exports[`QueryParser > parse("") 1`] = `[]`;

exports[`QueryParser > parse("'abc def'") 1`] = `
[
  {
    "filterValue": "abc def",
    "invert": false,
    "qualifier": "any",
  },
]
`;

exports[`QueryParser > parse("'by:abc\\"'") 1`] = `
[
  {
    "filterValue": "abc"",
    "invert": false,
    "qualifier": "author",
  },
]
`;

exports[`QueryParser > parse("\\"-abc\\"") 1`] = `
[
  {
    "filterValue": "-abc",
    "invert": false,
    "qualifier": "any",
  },
]
`;

exports[`QueryParser > parse("\\"abc def\\"") 1`] = `
[
  {
    "filterValue": "abc def",
    "invert": false,
    "qualifier": "any",
  },
]
`;

exports[`QueryParser > parse("\\"abc") 1`] = `
[
  {
    "filterValue": "abc",
    "invert": false,
    "qualifier": "any",
  },
]
`;

exports[`QueryParser > parse("\\"contains:abc\\"") 1`] = `
[
  {
    "filterValue": "abc",
    "invert": false,
    "qualifier": "contains",
  },
]
`;

exports[`QueryParser > parse("- abc") 1`] = `
[
  {
    "filterValue": "abc",
    "invert": true,
    "qualifier": "any",
  },
]
`;

exports[`QueryParser > parse("-\\"abc\\"") 1`] = `
[
  {
    "filterValue": "abc",
    "invert": true,
    "qualifier": "any",
  },
]
`;

exports[`QueryParser > parse("-abc -def") 1`] = `
[
  {
    "filterValue": "abc",
    "invert": true,
    "qualifier": "any",
  },
  {
    "filterValue": "def",
    "invert": true,
    "qualifier": "any",
  },
]
`;

exports[`QueryParser > parse("-abc def") 1`] = `
[
  {
    "filterValue": "abc",
    "invert": true,
    "qualifier": "any",
  },
  {
    "filterValue": "def",
    "invert": false,
    "qualifier": "any",
  },
]
`;

exports[`QueryParser > parse("-abc") 1`] = `
[
  {
    "filterValue": "abc",
    "invert": true,
    "qualifier": "any",
  },
]
`;

exports[`QueryParser > parse("-tagged:abc") 1`] = `
[
  {
    "filterValue": "abc",
    "invert": true,
    "qualifier": "tagged",
  },
]
`;

exports[`QueryParser > parse("TitLeD: \\"soft cake\\"") 1`] = `
[
  {
    "filterValue": "soft cake",
    "invert": false,
    "qualifier": "title",
  },
]
`;

exports[`QueryParser > parse("abc -\\"def\\"") 1`] = `
[
  {
    "filterValue": "abc",
    "invert": false,
    "qualifier": "any",
  },
  {
    "filterValue": "def",
    "invert": true,
    "qualifier": "any",
  },
]
`;

exports[`QueryParser > parse("abc -def") 1`] = `
[
  {
    "filterValue": "abc",
    "invert": false,
    "qualifier": "any",
  },
  {
    "filterValue": "def",
    "invert": true,
    "qualifier": "any",
  },
]
`;

exports[`QueryParser > parse("abc def") 1`] = `
[
  {
    "filterValue": "abc",
    "invert": false,
    "qualifier": "any",
  },
  {
    "filterValue": "def",
    "invert": false,
    "qualifier": "any",
  },
]
`;

exports[`QueryParser > parse("abc") 1`] = `
[
  {
    "filterValue": "abc",
    "invert": false,
    "qualifier": "any",
  },
]
`;

exports[`QueryParser > parse("author:\\"abc def\\"") 1`] = `
[
  {
    "filterValue": "abc def",
    "invert": false,
    "qualifier": "author",
  },
]
`;

exports[`QueryParser > parse("intitle:pie") 1`] = `
[
  {
    "filterValue": "pie",
    "invert": false,
    "qualifier": "title",
  },
]
`;

exports[`QueryParser > parse("source:google.com") 1`] = `
[
  {
    "filterValue": "google.com",
    "invert": false,
    "qualifier": "source",
  },
]
`;

exports[`QueryParser > parse("source:https://google.com/") 1`] = `
[
  {
    "filterValue": "https://google.com/",
    "invert": false,
    "qualifier": "source",
  },
]
`;

exports[`QueryParser > parse("source:https://google.com/?q=rick%20roll") 1`] = `
[
  {
    "filterValue": "https://google.com/?q=rick%20roll",
    "invert": false,
    "qualifier": "source",
  },
]
`;

exports[`QueryParser > parse("tag:abc") 1`] = `
[
  {
    "filterValue": "abc",
    "invert": false,
    "qualifier": "tagged",
  },
]
`;

exports[`QueryParser > parse("tagged: \\"abc\\"") 1`] = `
[
  {
    "filterValue": "abc",
    "invert": false,
    "qualifier": "tagged",
  },
]
`;

exports[`QueryParser > parse("tagged:abc\\"def\\"") 1`] = `
[
  {
    "filterValue": "abc",
    "invert": false,
    "qualifier": "tagged",
  },
  {
    "filterValue": "def",
    "invert": false,
    "qualifier": "any",
  },
]
`;

exports[`QueryParser > parse("tagged:contains:ABC") 1`] = `
[
  {
    "filterValue": "contains:ABC",
    "invert": false,
    "qualifier": "tagged",
  },
]
`;

exports[`QueryParser > parse("tagged:cookie author:Sophia") 1`] = `
[
  {
    "filterValue": "cookie",
    "invert": false,
    "qualifier": "tagged",
  },
  {
    "filterValue": "Sophia",
    "invert": false,
    "qualifier": "author",
  },
]
`;

exports[`QueryParser > parse("title:coolyo") 1`] = `
[
  {
    "filterValue": "coolyo",
    "invert": false,
    "qualifier": "title",
  },
]
`;
